# push_swap42

./: .gitignore  CMakeLists.txt  Makefile  a.out  checker  checker.c  lst_new.c  push_swap  push_swap.c  push_swap.h
checker.dSYM/Contents/Resources/DWARF/: checker
includes/: push_swap.h  push_swap.h.gch
libft/: Makefile  README.md  a.out  ft_atoi.c  ft_bzero.c  ft_check.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isdigit_str.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+27 more)
push_swap_library/: check_ascending_oder.c  clean_memory.c  exec_command.c  fill_stack.c  final_sort.c  find_command.c  find_extremum.c  find_position.c  functions_for_main_sort.c  is_digit.c  is_repeat.c  lst_new.c  main_sort.c  one_part_stack_a.c  pa.c  pb.c  ra_rb.c  rr.c  rra_rrb.c  rrr.c  sa_sb.c  sort_five_nums.c  sort_three_nums.c  ss.c
src/: a.out  check.c  check_ascending_oder.c  check_the operation.c  checker  checker.c  checker_main  exec_command.c  fill_stack.c  find_command.c  is_digit.c  is_repeat.c  lst_new.c  main  main_sort.c  new_pa.c  pa.c  pb.c  push_swap.c  ra_rb.c  rr.c  rra_rrb.c  rrr.c  sa_sb.c  ss.c
src_checker/: checker.c
src_push_swap/: push_swap.c
