cmake_minimum_required(VERSION 3.17)
project(push_swap42 C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)

add_executable(push_swap42
        includes/push_swap.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_check.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isdigit_str.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap_int.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        push_swap_library/check_ascending_oder.c
        push_swap_library/clean_memory.c
        push_swap_library/exec_command.c
        push_swap_library/fill_stack.c
        push_swap_library/final_sort.c
        push_swap_library/find_command.c
        push_swap_library/find_extremum.c
        push_swap_library/find_position.c
        push_swap_library/functions_for_main_sort.c
        push_swap_library/is_digit.c
        push_swap_library/is_repeat.c
        push_swap_library/lst_new.c
        push_swap_library/main_sort.c
        push_swap_library/one_part_stack_a.c
        push_swap_library/pa.c
        push_swap_library/pb.c
        push_swap_library/ra_rb.c
        push_swap_library/rr.c
        push_swap_library/rra_rrb.c
        push_swap_library/rrr.c
        push_swap_library/sa_sb.c
        push_swap_library/sort_five_nums.c
        push_swap_library/sort_three_nums.c
        push_swap_library/ss.c
        src_push_swap/push_swap.c)
